# map_logs

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
src/: console_ui.cpp  console_ui.hpp  file_tailer.cpp  file_tailer.hpp  http_server.cpp  http_server.hpp  log_entry.hpp  log_store.cpp  log_store.hpp  main.cpp  mcp_server.cpp  mcp_server.hpp  server_log.cpp  server_log.hpp  source_manager.cpp  source_manager.hpp  udp_receiver.cpp  udp_receiver.hpp
tests/: test_log_store.cpp
unreal/: LogServerOutputDevice.h
